basic modal component

--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,10 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--
+      Adding a div to create a portal in react for modals
+      Doing this to avoid any bugs around parent element position classes
+    -->
+    <div class="modal-container"></div>
   </body>
 </html>
